# mindsherpa-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile.dev  Dockerfile.prod  Dockerfile.test  Makefile  README.md  alembic.ini  conf.py  conftest.py  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements.txt  test.db  test_setup.py
.github/workflows/: build.yml  db-migrate.yml  test.yml
alembic/: env.py
alembic/versions/: 001_setup_postgres.py  2024_08_27_1235-6e0f2ab4072b_switch_focus_to_datetime.py  2024_08_30_0732-6c4194beb4b8_upgrade.py  2024_09_02_2023-24f51172a854_add_profile_fields_to_user.py  2024_09_12_2204-3f5fc0a85ceb_add_in_vector_store_to_focus.py  2024_09_24_2033-cf88c5a65698_add_focus_ids_to_message.py  31656ae66c49_add_focus_table.py  4f4580079301_initial_migration.py  5c4454081178_set_chat_state_to_string.py  6674e2e67df2_align_models_with_gql_schema.py  a3e6578f513d_inital_models.py  a9f792c82daa_add_chat_status_column.py  e4d6f72d4b9b_add_supabase_tables.py  e75809b95dc7_add_missing_default_created_at.py  e790245feccb_remove_focus_status.py  fb8c8d46203a_relationships.py
src/: groq.py  logger.py  main.py  schema.py  server.py
src/crons/: __init__.py  add_focus_to_chroma.py  focus_crons.py
src/data/: chat.py  chat_repository.py  context.py  data_access.py  db.py  focus.py  focus_repository.py  models.py  notes.py  notes_repository.py  types.py  users.py  users_repository.py
src/helpers/: generation_statistics.py
src/prompts/: sherpa_base.md  test_user_input.md  (+5 more)
tests/: test_chat_router.py  test_resolvers.py
(+83 files in other folders)
