[project]
name = "mindsherpa-api"
version = "0.1.0"
description = "An API that enables clients to interact with the Mindsherpa platform."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/main"]
